# cfilt

./: .gitignore  Cargo.toml  README.md  plot.py
cfilt/: utils.py
notebooks/: Untitled.ipynb  adaptive_gaussian.ipynb  autoencoder.ipynb  cartoon.ipynb  cascade.ipynb  cnn.ipynb  fft.ipynb  learn-gaussian.ipynb  perona-malik.ipynb
scripts/: generate_images.sh  plot.py  train_cascade.sh  train_cnn.py  train_multi_cnn.sh
src/: lib.rs
